# UnumLocalia

./: CHANGELOG.md  LICENSE  README.md  core02_non_tumour_thresholds.json  core03_tonsil_thresholds.json  environment.yml  pyproject.toml  setup.py
analysis/: README.md  environment.yml  unumlocalia_clustering.py
docs/: data_format.md  index.md  installation.md
examples/: 01_load_and_view.py  02_segmentation_benchmark.py  03_single_cell_analysis.py
spatialbench/: __init__.py  __main__.py  analysis.py  benchmark.py  io.py  segmentation.py  utils.py  viewer.py  widgets.py
spatialbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_analysis.py  test_benchmark.py  test_io.py  test_segmentation.py  test_utils.py
unumlocalia/: __init__.py  __main__.py  analysis.py  cli.py  io.py  utils.py  viewer.py  widgets.py
unumlocalia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
